Closed Bug 1880338 Opened 2 years ago Closed 2 years ago

Crash in [@ mozilla::dom::WebTransportChild::Shutdown ]

Categories

(Core :: Networking, defect, P2)

defect

Tracking

()

VERIFIED FIXED
124 Branch
Tracking Status
firefox124 --- verified

People

(Reporter: jib, Assigned: jesup)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

STR: Open https://libp2p-webtransport-sessions.on.fleek.co/ and wait 30 seconds

Expected result: no crash

Actual result: bp-2a18d855-d3ec-4108-9acc-383900240214

Assignee: nobody → rjesup
Severity: -- → S3
Priority: -- → P2
Whiteboard: [necko-triaged]
Pushed by rjesup@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7f39a50d5b9d null-check child ptr in WebTransport shutdown r=necko-reviewers,valentin
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch

Hello! I tried to reproduce and verify the issue but it seems that the page from comment 0 is no longer available. Can you please see if the issue is fixed with the latest Firefox beta if you have the time or access to the page? Or is there another similar page that we could use to reproduce the issue? Thank you in advance!

Flags: needinfo?(jib)

The website seems to work with a Colombia VPN setup. We will look into it tomorrow.

Flags: needinfo?(jib)

(In reply to Catalin Sasca, Desktop QA [:csasca] from comment #5)

The website seems to work with a Colombia VPN setup. We will look into it tomorrow.

Thank you!
Reproduced the issue with Firefox 124.0a1 (2024-02-14) on Windows 10x64.
The issue is verified fixed with Firefox 124.0b2 on Windows 10x64, macOS 12 and Lubuntu 22. No crash after opening the link from comment 0 more than 35 seconds.

Status: RESOLVED → VERIFIED
Has STR: --- → yes
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: