Bug 1880338: null-check child ptr in WebTransport shutdown r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D201849